--- a/ch1_standdeg_canopy.Rmd
+++ b/ch1_standdeg_canopy.Rmd
@@ -2151,6 +2151,13 @@ standheight_full <- read_csv("deg_maxheight.csv",
   rename(rep = Transect_rep, 
          reading = Reading, 
          species = Species) %>% 
+  mutate(site = case_when(site == "ENH_1" ~ "ENH1", # old name ~ new name
+                          site == "ENH_2" ~ "ENH2",
+                          site == "ENH_3" ~ "ENH3", 
+                          site == "DEG_1" ~ "DEG1",
+                          site == "DEG_2" ~ "DEG2", 
+                          site == "DEG_3" ~ "DEG3", 
+                          TRUE ~ site)) %>% 
   mutate(standtype = fct_relevel(standtype, "Intact", "Matrix", "Degraded")) %>% 
   filter(site!= "Intact_4")
 view(standheight_full)
@@ -2180,7 +2187,18 @@ histogram(standheight_full$height_cm)
 ggplot(data = standheight_full, 
        aes(x = site_rep, y = height_cm)) +
   geom_point() +
-  theme(axis.text.x.bottom = element_text(angle = 90))
+  theme(axis.text.x.bottom = element_text(angle = 90)) +  
+  labs(x = "Transect ID", 
+       y = "Canopy height (cm)", 
+       title = "Canopy height (cm) by transect")
+
+ggplot(standheight_full, 
+       aes(x = site_rep, y = height_cm)) +
+  geom_boxplot() +
+  theme(axis.text.x.bottom = element_text(angle = 90)) +
+  labs(x = "Transect ID", 
+       y = "Canopy height (cm)", 
+       title = "Canopy height (cm) by transect")
 ```
 
 ```{r combine columns - canopy height, include = TRUE}
@@ -2194,43 +2212,97 @@ standheight_siterep_meanSD <- standheight_full %>%
             se = ((sd(height_cm))/sqrt(length((height_cm))))) %>% 
   print(standheight_siterep_meanSD) # prints: standtype - site_rep - mean... 
 
-```
-
-```{r COV by transects, include=TRUE}
-#add mean height to site_rep
-
-transect_prepCOV <- standheight_siterep_meanSD %>% 
-  dplyr::select('site_rep', 'mean_height')
-
-transectCOV <- standheight_full %>% 
-  left_join(transect_prepCOV, by = 'site_rep') %>% 
-   dplyr::select(!c('standtype.y')) %>% 
-  rename('standtype' = 'standtype.x') %>% 
-  mutate(dist_from_mean = height_cm - mean_height)
-
-print(transectCOV)
+# mean SD by transect - 15 rows
+standheight_site_meanSD <- standheight_full %>% 
+  group_by(standtype, site) %>%
+  summarize(mean_height = mean(height_cm),
+            n = length((height_cm)),
+            sd = sd(height_cm),
+            se = ((sd(height_cm))/sqrt(length((height_cm))))) %>% 
+  print(standheight_site_meanSD) # prints: standtype - site_rep - mean... 
 ```
 
 ```{r}
+# columnn plot x site_rep
+ggplot(standheight_siterep_meanSD, 
+       aes(x = site_rep, y = mean_height, fill = standtype)) +
+  geom_col(color = "black") +
+  scale_fill_manual(values = standcolors) +
+  geom_errorbar(aes(ymin = mean_height - se, ymax = mean_height + se), width = 0.5) +
+   theme(axis.text.x.bottom = element_text(angle = 90)) +
+  labs(x = "Transect ID", 
+   y = "Mean canopy height (cm)", 
+       title = "Mean canopy height (cm) by transect")
+
+# columnn plot x site
+ggplot(standheight_site_meanSD, 
+       aes(x = site, y = mean_height, fill = standtype)) +
+  geom_col(color = "black") +
+  scale_fill_manual(values = standcolors) +
+  geom_errorbar(aes(ymin = mean_height - se, ymax = mean_height + se), width = 0.5) +
+   #theme(axis.text.x.bottom = element_text(angle = 90)) +
+  labs(x = "Hillslope", 
+   y = "Mean canopy height (cm)", 
+       title = "Mean canopy height (cm) by hillslope")
+```
+
+
+```{r stand height stats, include = TRUE}
 shapiro.test(standheight_full$height_cm)
 # 	Shapiro-Wilk normality test
 # data:  standheight_full$height_cm
 # W = 0.90732, p-value < 2.2e-16 <-- not normally distributed
 
-kruskal.test(height_cm ~ standtype, data = standheight_full)
-# 	Kruskal-Wallis rank sum test
-# data:  height_cm by standtype
-# Kruskal-Wallis chi-squared = 37.914, df = 2, p-value = 5.85e-09
+kruskal.test(height_cm ~ site_rep, data = standheight_full)
+# Kruskal-Wallis rank sum test
+# 
+# data:  height_cm by site_rep
+# Kruskal-Wallis chi-squared = 108.21, df = 14, p-value < 2.2e-16 <-- there are sig differences
 
-pairwise.wilcox.test(standheight_full$height_cm, standheight_full$standtype,
+pairwise.wilcox.test(standheight_full$height_cm, standheight_full$site_rep,
                  p.adjust.method = "BH")
-# Pairwise comparisons using Wilcoxon rank sum test with continuity correction 
-# data:  standheight_full$height_cm and standheight_full$standtype 
-#          Intact  Matrix 
-# Matrix   9.7e-07 -      
-# Degraded 9.7e-07 0.00042 <-- all are significantly different
-# P value adjustment method: BH 
+# 	Pairwise comparisons using Wilcoxon rank sum test with continuity correction <-- error message Warning: cannot compute exact p-value with ties
+# 
+# data:  standheight_full$height_cm and standheight_full$site_rep 
+# 
+#            DEG1_1  DEG1_2  DEG1_3  DEG2_4  DEG2_5  DEG2_6  ENH1_1  ENH1_2  ENH1_3  ENH2_4  ENH2_5  ENH2_6  Intact_1_1 Intact_2_2
+# DEG1_2     0.04716 -       -       -       -       -       -       -       -       -       -       -       -          -         
+# DEG1_3     0.00793 0.58907 -       -       -       -       -       -       -       -       -       -       -          -         
+# DEG2_4     0.41016 0.45869 0.11792 -       -       -       -       -       -       -       -       -       -          -         
+# DEG2_5     0.09542 0.72119 0.91270 0.61011 -       -       -       -       -       -       -       -       -          -         
+# DEG2_6     0.63898 0.28765 0.10600 0.44577 0.17387 -       -       -       -       -       -       -       -          -         
+# ENH1_1     0.07404 0.27538 0.25829 0.56390 0.88053 0.41016 -       -       -       -       -       -       -          -         
+# ENH1_2     0.54994 0.42863 0.40877 0.29792 0.19663 0.35502 0.31081 -       -       -       -       -       -          -         
+# ENH1_3     0.26132 0.05340 0.03912 0.09197 0.02673 0.10600 0.05315 0.77211 -       -       -       -       -          -         
+# ENH2_4     8.6e-05 0.00048 0.00060 0.00462 0.03918 0.00098 0.02173 0.03976 0.00032 -       -       -       -          -         
+# ENH2_5     2.8e-06 2.2e-05 2.2e-05 0.00169 0.02360 0.00011 0.01594 0.04716 0.00020 0.79009 -       -       -          -         
+# ENH2_6     0.00046 0.00716 0.00983 0.02527 0.11387 0.00401 0.08484 0.05187 0.00095 0.49368 0.58907 -       -          -         
+# Intact_1_1 0.10762 0.07438 0.06278 0.05290 0.04193 0.07902 0.12226 0.72467 0.43908 0.01229 0.01594 0.01594 -          -         
+# Intact_2_2 0.43529 0.81915 0.56431 0.91873 0.63838 0.63898 0.85178 0.16836 0.05208 0.06034 0.04788 0.13437 0.05187    -         
+# Intact_3_3 1.0e-05 5.8e-07 1.9e-07 4.9e-06 1.3e-06 3.2e-06 1.4e-06 0.00524 0.00034 4.2e-08 2.4e-08 5.2e-08 0.03621    3.2e-06 
+
+
+kruskal.test(height_cm ~ site, data = standheight_full)
+# 	Kruskal-Wallis rank sum test
+# 
+# data:  height_cm by site
+# Kruskal-Wallis chi-squared = 98.456, df = 6, p-value < 2.2e-16 <-- ther are sig differences
+
+pairwise.wilcox.test(standheight_full$height_cm, standheight_full$site,
+                 p.adjust.method = "BH")
+# Pairwise comparisons using Wilcoxon rank sum test with continuity correction <-- error message Warning: cannot compute exact p-value with ties
+# 
+# data:  standheight_full$height_cm and standheight_full$site 
+# 
+#          DEG1    DEG2    ENH1    ENH2    Intact_1 Intact_2
+# DEG2     0.7707  -       -       -       -        -       
+# ENH1     0.5132  0.1258  -       -       -        -       
+# ENH2     1.4e-11 4.1e-07 9.1e-07 -       -        -       
+# Intact_1 0.0223  0.0139  0.2486  0.0012  -        -       
+# Intact_2 0.9924  0.9924  0.1258  0.0218  0.0363   -       
+# Intact_3 2.2e-10 1.1e-09 8.5e-07 6.5e-13 0.0223   8.5e-07 
 ```
+
 
 
 ```{r extra code - mean canopy height by stand type, include=FALSE}
@@ -2287,6 +2359,81 @@ standheight_cov_transect <- standheight_siterep_meanSD %>% # Intact n = 3, Matri
 standheight_cov_transect[order(standheight_cov_transect$cov_bytransect), ]
 
 ```
+
+
+```{r COV by transect prep, include=FALSE}
+#add mean height to site_rep
+
+transect_prepCOV <- standheight_siterep_meanSD %>% 
+  dplyr::select('site_rep', 'mean_height')
+
+transectCOV <- standheight_full %>% 
+  left_join(transect_prepCOV, by = 'site_rep') %>% 
+   dplyr::select(!c('standtype.y')) %>% 
+  rename('standtype' = 'standtype.x') %>% 
+  mutate(dist_from_mean = height_cm - mean_height) %>% 
+  left_join(nncover, by = 'site_rep') %>% 
+  dplyr::select(!c('standtype', 'standtype.y', 'X')) %>% 
+  rename('standtype' = 'standtype.x')
+  
+
+print(transectCOV)
+```
+
+```{r graph distance from mean canopy height, include=FALSE}
+
+# distance from mean canopy height x transect
+# - scatterplot
+ggplot(data = transectCOV, 
+       aes(x = site_rep, y = dist_from_mean)) +
+  geom_point() +
+  theme(axis.text.x.bottom = element_text(angle = 90)) +
+  labs(x = "Transect ID", 
+       y = "Distance from mean canopy cover (cm)", 
+       title = "Distance from mean canopy height (cm) by Transect ID")
+# - box plot
+ggplot(transectCOV, 
+       aes(x = site_rep, y = dist_from_mean)) +
+  geom_boxplot() +
+  theme(axis.text.x.bottom = element_text(angle = 90)) +
+  labs(x = "Transect ID", 
+   y = "Distance from mean canopy height (cm)", 
+       title = "Canopy height (cm) by transect")
+
+# distance from mean canopy height x nn grass cover
+ggplot(transectCOV, 
+       aes(x = percentcover_nonnative, y = dist_from_mean)) +
+  geom_point(aes(fill = standtype), colour = "black", size = 3, pch = 21) +
+ # theme(axis.text.x.bottom = element_text(angle = 90)) +
+labs(x = "Average non-native grass cover (%)", 
+       y = "Distance from mean canopy height (cm)", 
+       title = "Distance from mean canopy height (cm) by average non-native cover (%)")
+
+```
+
+```{r stats for COV, include=FALSE}
+
+histogram(transectCOV$dist_from_mean)
+
+shapiro.test(transectCOV$dist_from_mean)
+# Shapiro-Wilk normality test
+# 
+# data:  transectCOV$dist_from_mean
+# W = 0.98131, p-value = 4.462e-07 <-- not normally distributed
+
+kruskal.test(dist_from_mean ~ site_rep, data = transectCOV)
+# Kruskal-Wallis rank sum test
+# 
+# data:  dist_from_mean by site_rep
+# Kruskal-Wallis chi-squared = 2.2501, df = 14, p-value = 0.9998 <-- no sig difference between transects
+
+pairwise.wilcox.test(transectCOV$dist_from_mean, transectCOV$site_rep,
+                 p.adjust.method = "BH")
+# All values are equal to 1 because the mean is calculated from the raw values. SO - the cumulative "dist_to_mean" is going to be zero because that's how the mean is calculated - the mean is the centroid value of all raw data points. 
+# So - analyze differences in transect height based on mean heights and SD... NOT COV since you have an N of 1.  
+```
+
+
 
 
 ```{r COV - stand height by standtype, include=TRUE}
